bad/mul_invalid_types_bool_bool.example_compiler_output
ERROR
[1mbad/mul_invalid_types_bool_bool.lat:3:7: [1;31merror: [0;1mmultiplication is defined only for int values, not `boolean` and `boolean`[m
	true * false;
	     [1;32m^[m
